--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,12 +7,17 @@
 <body>
 
 	<a href="/" class="page-logo js-regenerate">
-		<img src="/images/wormshill-logo.png" alt="Wormshill Artisan logo" />
+		GENERATE
 	</a>
 
 	<section>
-		<span id="randomFood"></span>
-		<a id="foodTweet"></a>
+		<span id="randomShow"></span>
+		<a id="showTweet"></a>
+		
+		<div>
+			<img src="/images/partridge.png" alt="Alan at his finest" />
+		</div>
+
 	</section>
 	
 	<!-- Scripts separate during development -->	
