--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Wormshill Artisan Generator</title>
-<link href='https://fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
+<title>Partridge Show Generator</title>
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
 
 <script>
