adding basic button style and position

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,13 +6,21 @@
 
 <body>
 
-	<a href="/" class="page-logo js-regenerate">
-		GENERATE
-	</a>
-
 	<section>
-		<span id="randomShow"></span>
-		<a id="showTweet"></a>
+
+		<div>		
+			<span id="randomShow"></span>
+		</div>
+
+		<div>
+			<a href="/" class="button js-regenerate">
+				GENERATE
+			</a>			
+		</div>
+		
+		<div class="social-actions">	
+			<a id="showTweet"></a>			
+		</div>
 		
 		<div>
 			<img src="/images/partridge.png" alt="Alan at his finest" />
