--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -10,10 +10,15 @@ h1 {
 	display: block;
 }
 
-.page-logo img {
-	border: none;
-	width: 7em;
-	height: 7em;
+.button {
+	display: inline-block;
+    background-color: #efefef;
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    margin-bottom: 1em;
+    color: #555555;
 }
 
 section {
@@ -27,6 +32,10 @@ section {
 	text-transform: capitalize;
 	font-size: 3.2em;
 	margin: 0.5em 0;
+}
+
+.social-actions {
+	height: 2em;
 }
 
 #showTweet {
