--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -12,13 +12,18 @@ h1 {
 
 .button {
 	display: inline-block;
-    background-color: #efefef;
-    border: none;
-    padding: 15px 32px;
+    background-color: #fff;
+    border: 2px solid #000;
+    padding: 15px 62px;
     text-align: center;
     text-decoration: none;
     margin-bottom: 1em;
-    color: #555555;
+    color: #000;
+    font-weight: bold;
+    font-size: 1.2em;
+}
+
+.button:hover {
 }
 
 section {
@@ -32,6 +37,7 @@ section {
 	text-transform: capitalize;
 	font-size: 3.2em;
 	margin: 0.5em 0;
+	font-family: 'Caveat', cursive;
 }
 
 .social-actions {
