--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>Partridge Show Generator</title>
+<link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
 
 <script>
